# fleauxlang

./: .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  README_VM_MIGRATION.md  Std.dot  Std.fleaux  THIRD_PARTY_NOTICES.md  VM_MIGRATION_INDEX.md  VM_MIGRATION_MANIFEST.md  bresenham.fleaux  coi-serviceworker.js  conftest.py  examples_dataflow.fleaux  examples_dataflow_core.fleaux  examples_dataflow_working.fleaux  examples_input_flow.fleaux  experiment_undefined.fleaux  fleaux  fleaux.tmLanguage.json  fleaux_ast.py  fleaux_cpp_transpiler.py  fleaux_diagnostics.py  fleaux_generated_module_Std.py  fleaux_generated_module__loop_probe.py  fleaux_generated_module_branch_test.py  fleaux_generated_module_examples_dataflow_core.py  fleaux_generated_module_examples_input_flow.py  fleaux_generated_module_realistic_program.py  fleaux_generated_module_regression_test.py  fleaux_generated_module_sample.py  fleaux_generated_module_test.py  fleaux_generated_module_test_grammar_fixed.py  fleaux_grammar.pg  fleaux_grammar.tx  fleaux_graphviz.py  fleaux_hand_parser.py  fleaux_lowering.py  fleaux_parser.py  (+18 more)
assets/: index-7fup73bk.css  index-BXLbVdFh.js  index-BiDWbADi.js  index-C6zD9ACN.js  index-C9ik9tt0.js  index-CDFbHTMH.js  index-Dcw4Gir_.css  index-VGP-YwQS.css  index-gJcrLfrA.css  wasmCoordinator.worker-Cyh2Kw7W.js
core/: CMakeLists.txt  CMakeUserPresets.json  conandata.yml  conanfile.py  conanfile.txt
core/build-tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
core/build-tests-vm/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  mode_parity_report.json
core/build-tests-vm/Testing/Temporary/: CTestCostData.txt
core/build-tests/Testing/Temporary/: CTestCostData.txt
core/cmake/: fleaux-config.cmake.in  generate_embedded_resources.py
core/include/fleaux/bytecode/: compiler.hpp  escape_analyzer.hpp  module.hpp  module_loader.hpp  opcode.hpp  optimizer.hpp  serialization.hpp
core/include/fleaux/cli/: line_editor.hpp  repl_driver.hpp
core/include/fleaux/common/: box.hpp  embedded_resource.hpp  indirect_optional.hpp  overloaded.hpp  sample_sources.hpp  symbol_name.hpp  trie.hpp  utility.hpp
core/include/fleaux/embed/: binding_plugin.hpp  dynamic_loader.hpp  fleaux_binding.hpp  native_bindings.hpp  vm_host.hpp
core/include/fleaux/frontend/: analysis.hpp  ast.hpp  box.hpp  cpp_transpiler.hpp  diagnostics.hpp  import_resolution.hpp  ir_tuple_protocol.hpp  lexer.hpp  lowering.hpp  parser.hpp  source_loader.hpp  stdlib_locator.hpp  type_check.hpp  type_node.hpp
core/include/fleaux/frontend/type_system/: builtin_contracts.hpp  call_shape.hpp  checker.hpp  function_index.hpp  type.hpp
core/include/fleaux/frontend/type_system/detail/: checker_internal.hpp  type_format.hpp
core/include/fleaux/runtime/: builtins_array.hpp  builtins_core.hpp  builtins_dict.hpp  builtins_help.hpp  builtins_io.hpp  builtins_math.hpp  builtins_parallel.hpp  builtins_random.hpp  builtins_string.hpp  builtins_tuple.hpp  fleaux_runtime.hpp  runtime_support.hpp  value.hpp
core/include/fleaux/vm/: builtin_catalog.hpp  interpreter.hpp  runtime.hpp
core/src/bytecode/: compiler.cpp  escape_analyzer.cpp  module_loader.cpp  optimizer.cpp  serialization.cpp
core/src/cli/: line_editor.cpp  main.cpp  repl_driver.cpp  vm_main.cpp
core/src/common/: embedded_resource.cpp
core/src/embed/: dynamic_loader.cpp  native_bindings.cpp  vm_host.cpp
core/src/frontend/: cpp_transpiler.cpp  diagnostics.cpp  lexer.cpp  lowering.cpp  parser.cpp  type_check.cpp
core/src/frontend/type_system/: builtin_contracts.cpp  call_shape.cpp  check_decl.cpp  check_expr.cpp  check_pipeline.cpp  checker.cpp  function_index.cpp  type.cpp
core/src/vm/: builtin_map.hpp  interpreter.cpp  repl_support.hpp  runtime.cpp  std_help_metadata.hpp
core/tests/: box_tests.cpp  bytecode_tests.cpp  diagnostics_tests.cpp  embed_api_surface_tests.cpp  embed_dynamic_loader_tests.cpp  embed_native_bindings_tests.cpp  embed_vm_host_tests.cpp  embedded_resource_integration_tests.cpp  embedded_resource_tests.cpp  indirect_optional_tests.cpp  lowering_tests.cpp  opcode_stringify_tests.cpp  parser_tests.cpp  parser_type_syntax_tests.cpp  repl_line_editor_tests.cpp  runtime_builtins_tests.cpp  runtime_microbench.cpp  structured_visit_tests.cpp  test_main.cpp  transpiler_tests.cpp  typecheck_tests.cpp  vm_boundary_matrix_tests.cpp  vm_cli_tests.cpp  vm_import_contract_parity_tests.cpp  vm_import_contract_tests.cpp  vm_runtime_tests.cpp  vm_samples_tests.cpp  vm_test_support.hpp
core/tests/fixtures/: binding_plugin_abi_mismatch.cpp  binding_plugin_echo.cpp  binding_plugin_missing_entrypoint.cpp  binding_plugin_partial_registration_failed.cpp  binding_plugin_registration_failed.cpp
cpp/: CMakeLists.txt  README.md  fleaux_runtime.hpp  test_runtime.cpp
cpp_exploration/: CMakeLists.txt  CPP20_TRANSPILER.md  CPP20_V2_PLAN.md  build_cpp20_example.sh  fleaux_cpp_transpiler_v2.py  fleaux_generated_Std.cpp  fleaux_generated_Std.hpp  fleaux_generated_Std_v2.cpp  fleaux_generated_Std_v2.hpp  fleaux_generated_test_v2.hpp  fleaux_runtime.hpp  fleaux_runtime_v2.hpp  main.cpp
docs/: developer_feature_map.md  embedding.md  fleaux_language_usage_guide.md
fleaux-visual/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  wasm-harness.html
python_frontend/: __init__.py  fleaux_ast.py  fleaux_cpp_transpiler.py  fleaux_diagnostics.py  fleaux_graphviz.py  fleaux_lowering.py  fleaux_parser.py  run_fleaux.py
samples/: 01_hello_world.fleaux  02_arithmetic.fleaux  03_pipeline_chaining.fleaux  04_function_definitions.fleaux  05_select.fleaux  06_branch.fleaux  07_apply.fleaux  08_loop.fleaux  09_loop_n.fleaux  10_strings.fleaux  11_tuples.fleaux  12_math.fleaux  13_comparison_and_logic.fleaux  14_os.fleaux  15_path.fleaux  16_file_and_dir.fleaux  17_printf_and_tostring.fleaux  18_constants.fleaux  19_composition.fleaux  20_export.fleaux  21_import.fleaux  22_file_streaming.fleaux  23_binary_search.fleaux  (+30 more)
(+88 files in other folders)
